[package]
name = "cfeed"
version = "0.1.0"
authors = ["Davide Forlani <forla.df@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
terminate = { git = "https://github.com/deved99/terminate.git", branch = "main" }
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
# Json handling
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rss = "1.10"
# Graphical
gtk4 = "0.3"
glib = "0.14"
